correction alignement box menu 2

--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -207,10 +207,6 @@ top: 37%;
 
     display: flex;
 
-    position: relative;
-    top: 31%;
-
-
   }
 
   .icone_titre{
